moved code example to markdown

--- a/CM26_week2lab.ipynb
+++ b/CM26_week2lab.ipynb
@@ -219,16 +219,9 @@
     "\n",
     "5c. How can we compare whether one is 'significantly higher' than the other? Hint: We can use a t-test. But should we use a parametric or non-parametric test?\n",
     "\n",
-    "5d. Plot the histogram of the two series side by side."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3102c11d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "5d. Plot the histogram of the two series side by side.\n",
+    "\n",
+    "```python\n",
     "# Example code: \n",
     "s1 = pd.Series([1,2,3,4,5,6,7,8])\n",
     "s2 = pd.Series([5,2,-5,4,0,1,7,5])\n",
@@ -239,7 +232,8 @@
     "\n",
     "# Non-parametric: Mann-Whitney U test\n",
     "u_stat, p_value = stats.mannwhitneyu(s1, s2)\n",
-    "print(u_stat, p_value)"
+    "print(u_stat, p_value)\n",
+    "```"
    ]
   },
   {
