parameter order bug fixed

--- a/CM26_week3lab.ipynb
+++ b/CM26_week3lab.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0e4eb92f",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
     "# Example usage\n",
     "if __name__ == \"__main__\":\n",
     "    post_url = \"https://www.reddit.com/r/LabourUK/comments/1qtp6ee/in_gorton_and_denton_i_found_a_longfestering/\"\n",
-    "    my_user_agent = \"CompMethods Lab Exercise (u/<...>)\n",
+    "    my_user_agent = \"CompMethods Lab Exercise (u/<...>)\"\n",
     "    \n",
     "    data = get_reddit_post(post_url, user_agent=my_user_agent)\n",
     "    \n",
@@ -185,50 +185,7 @@
    "execution_count": null,
    "id": "dc370c28",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching top posts from r/news...\n",
-      "  Fetching post 1/25: Luigi Mangione accepts nearly $300K in d...\n",
-      "  Fetching post 2/25: Elon Musk and Prince Andrew named in lat...\n",
-      "  Fetching post 3/25: Personal information of 4,500 ICE and Bo...\n",
-      "  Fetching post 4/25: ABC suspends Jimmy Kimmel’s late-night s...\n",
-      "  Fetching post 5/25: Tesla investor calls for Elon Musk to st...\n",
-      "  Fetching post 6/25: As top Trump aides sent texts on Signal,...\n",
-      "Posts collected: 6\n",
-      "Comments collected: 219\n",
-      "Unique commenters: 192\n",
-      "\n",
-      "Comments per post:\n",
-      "count     6.000000\n",
-      "mean     36.500000\n",
-      "std      13.560973\n",
-      "min      18.000000\n",
-      "25%      27.500000\n",
-      "50%      38.000000\n",
-      "75%      44.750000\n",
-      "max      54.000000\n",
-      "dtype: float64\n",
-      "\n",
-      "Sample comments:\n",
-      "                 author                                               body  \\\n",
-      "0      TalmadgeReyn0lds  My MS medication costs $163k every 6 months, w...   \n",
-      "1        brickyardjimmy    Please, oh please, let this trial be televised.   \n",
-      "2          Insciuspetra         So..\\n\\nOne week in a hospital beds worth.   \n",
-      "3  Historical_Avocado_8  **VERY IMPORTANT REMINDER:**\\n\\nIf you’re a po...   \n",
-      "4         brokenmessiah  All the love he was getting in surprised not i...   \n",
-      "\n",
-      "     ups  \n",
-      "0   3921  \n",
-      "1  14980  \n",
-      "2  16893  \n",
-      "3   2997  \n",
-      "4   3294  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_subreddit(subreddit, user_agent, time_filter=\"year\", rating_filter=\"top\"):\n",
     "    \"\"\"\n",
@@ -273,7 +230,7 @@
     "    \n",
     "    # Stage 1: Get list of top posts\n",
     "    print(f\"Fetching top posts from r/{subreddit}...\")\n",
-    "    listing_data = get_subreddit(subreddit, time_filter, user_agent, rating_filter)\n",
+    "    listing_data = get_subreddit(subreddit, user_agent, time_filter,rating_filter)\n",
     "    \n",
     "    posts = []\n",
     "    comments = []\n",
@@ -341,9 +298,9 @@
     "    import pandas as pd\n",
     "    \n",
     "    # my_user_agent = \"CompMethods Lab Exercise (u/berniehogan)\"\n",
-    "    my_user_agent = \"CompMethods Lab Exercise (u/<...>) # edit\n",
+    "    my_user_agent = \"CompMethods Lab Exercise (u/<...>)\" # edit\n",
     "    \n",
-    "    posts_df, comments_df = build_dataframes(\"news\", time_filter=\"year\", user_agent=my_user_agent)\n",
+    "    posts_df, comments_df = build_dataframes(subreddit=\"news\", user_agent=my_user_agent, time_filter=\"year\", rating_filter=\"top\")\n",
     "    \n",
     "    # Remove stickied posts\n",
     "    stickied_ids = posts_df[posts_df[\"stickied\"] == True][\"id\"].tolist()\n",
